fixed title overlap issue

--- a/cssFiles/bg_style.css
+++ b/cssFiles/bg_style.css
@@ -10,6 +10,10 @@
     font-family: OET;
     src: url("../fonts/OldEnglishTextMT2.ttf")
 }
+@font-face {
+    font-family: MS;
+    src: url("../fonts/MarckScript-Regular.ttf")
+}
 
 * {
     margin: 0;
@@ -144,10 +148,10 @@ h1.titleText {
 .leftContainer ul li {
     position: relative;
     color: white;
-    font-family: 'AFY';
-    font-size: 32px;
-    font-weight: 600;
-    letter-spacing: 1.2px;
+    font-family: 'MS';
+    font-size: 35px;
+    font-weight: 550;
+    letter-spacing: 1.1px;
     padding: 5px;
     margin: 15px 2px;
     cursor: pointer;
@@ -402,8 +406,8 @@ h1.titleText {
     }
 
     .leftContainer ul li {
-        font-size: 22px;
-        margin: 10px 2px;
+        font-size: 30px;
+        margin: 7px 2px;
     }
 
     .leftContainer ul a li.active {
@@ -452,6 +456,18 @@ h1.titleText {
         font-size: 50px;
     }
 }
+
+@media (max-height: 750px) {
+    .leftContainer ul {
+        margin-top: 30px;
+    }
+    
+    .leftContainer ul li {
+        font-size: 30px;
+        margin: 9px 2px;
+    }
+}
+
 
 /* scrollbar */
 
